--- a/package.json
+++ b/package.json
@@ -34,5 +34,7 @@
     "mini-css-extract-plugin": "^2.6.0",
     "webpack-merge": "^5.8.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "lodash": "^4.17.21"
+  }
 }
